text.txt
lin@lin-VirtualBox:~/Downloads/ns-allinone-3.35/ns-3.35$ ./waf --run="leo-lab6 --Task=2 --in="paths1.in" --out="task2.out""
Waf: Entering directory `/home/lin/Downloads/ns-allinone-3.35/ns-3.35/build'
[1987/2979] Compiling src/nix-vector-routing/model/nix-vector-routing.cc
[2705/2979] Compiling contrib/leo/examples/leo-lab6.cc
../contrib/leo/examples/leo-lab6.cc: In function ‘void SendPacket(int, int, ns3::ApplicationContainer&)’:
../contrib/leo/examples/leo-lab6.cc:65:15: warning: comparison of integer expressions of different signedness: ‘int’ and ‘uint32_t’ {aka ‘unsigned int’} [-Wsign-compare]
   65 |     if (srcId < satellites.GetN()) {
      |         ~~~~~~^~~~~~~~~~~~~~~~~~~
../contrib/leo/examples/leo-lab6.cc:71:15: warning: comparison of integer expressions of different signedness: ‘int’ and ‘uint32_t’ {aka ‘unsigned int’} [-Wsign-compare]
   71 |     if (dstId < satellites.GetN()) {
      |         ~~~~~~^~~~~~~~~~~~~~~~~~~
../contrib/leo/examples/leo-lab6.cc: In function ‘int main(int, char**)’:
../contrib/leo/examples/leo-lab6.cc:226:41: error: ‘class ns3::ApplicationContainer’ has no member named ‘size’
  226 |         for (size_t i = 0; i < sinkApps.size() && i < sdPairs.size(); i++) {
      |                                         ^~~~
../contrib/leo/examples/leo-lab6.cc:227:46: error: no match for ‘operator[]’ (operand types are ‘ns3::ApplicationContainer’ and ‘size_t’ {aka ‘long unsigned int’})
  227 |             uint32_t bytesReceived = sinkApps[i]->GetTotalRx();
      |                                              ^

Waf: Leaving directory `/home/lin/Downloads/ns-allinone-3.35/ns-3.35/build'
Build failed
 -> task in 'leo-lab6' failed with exit status 1 (run with -v to display more information)
